--- a/Netflix.html
+++ b/Netflix.html
@@ -40,10 +40,7 @@ time&nbsp;zones;&nbsp;instead&nbsp;the&nbsp;returned&nbsp;value&nbsp;will&nbsp;e
 of&nbsp;the&nbsp;timezone&nbsp;or&nbsp;altzone&nbsp;attributes&nbsp;on&nbsp;the&nbsp;time&nbsp;module.</tt></dd></dl>
  <dl><dt><a name="-netflix_eval"><strong>netflix_eval</strong></a>(movie_id, customer_id)</dt><dd><tt>movie_id&nbsp;the&nbsp;movie&nbsp;being&nbsp;rated<br>
 customer_id&nbsp;the&nbsp;customer&nbsp;rating&nbsp;being&nbsp;predicted&nbsp;for&nbsp;a&nbsp;particular&nbsp;movie<br>
-return&nbsp;the&nbsp;predicted&nbsp;value&nbsp;of&nbsp;the&nbsp;movie&nbsp;rating&nbsp;for&nbsp;the&nbsp;customer</tt></dd></dl>
- <dl><dt><a name="-netflix_lookup"><strong>netflix_lookup</strong></a>(movie_id, customer_id)</dt><dd><tt>movie_id&nbsp;a&nbsp;string<br>
-customer_id&nbsp;a&nbsp;string<br>
-returns&nbsp;the&nbsp;actual&nbsp;score&nbsp;for&nbsp;a&nbsp;customer&nbsp;on&nbsp;a&nbsp;particular&nbsp;movie</tt></dd></dl>
+return&nbsp;the&nbsp;predicted&nbsp;value&nbsp;of&nbsp;the&nbsp;movie&nbsp;rating&nbsp;for&nbsp;the&nbsp;customer&nbsp;taken&nbsp;by&nbsp;the&nbsp;average&nbsp;rating&nbsp;for&nbsp;a&nbsp;movie&nbsp;minus&nbsp;the&nbsp;average&nbsp;offset</tt></dd></dl>
  <dl><dt><a name="-netflix_print"><strong>netflix_print</strong></a>(w, i)</dt><dd><tt>print&nbsp;one&nbsp;line&nbsp;of&nbsp;text<br>
 w&nbsp;a&nbsp;writer<br>
 i&nbsp;the&nbsp;movie_id&nbsp;or&nbsp;the&nbsp;predicted&nbsp;score</tt></dd></dl>
@@ -54,6 +51,10 @@ return&nbsp;a&nbsp;decimal,&nbsp;representing&nbsp;the&nbsp;root&nbsp;mean&nbsp;
  <dl><dt><a name="-netflix_solve"><strong>netflix_solve</strong></a>(r, w)</dt><dd><tt>r&nbsp;a&nbsp;reader<br>
 w&nbsp;a&nbsp;writer<br>
 prints&nbsp;the&nbsp;predicted&nbsp;scores&nbsp;and&nbsp;rmse&nbsp;for&nbsp;all&nbsp;movies&nbsp;and&nbsp;customers&nbsp;from&nbsp;reader</tt></dd></dl>
+ <dl><dt><a name="-netflix_zip"><strong>netflix_zip</strong></a>(output_data, w)</dt><dd><tt>Align&nbsp;two&nbsp;data&nbsp;sets&nbsp;for&nbsp;RMSE<br>
+output_data&nbsp;a&nbsp;dict<br>
+w&nbsp;a&nbsp;writer<br>
+returns&nbsp;two&nbsp;lists&nbsp;of&nbsp;corresponding&nbsp;actual&nbsp;and&nbsp;predicted&nbsp;values</tt></dd></dl>
 </td></tr></table><p>
 <table width="100%" cellspacing=0 cellpadding=2 border=0 summary="section">
 <tr bgcolor="#55aa55">
@@ -61,15 +62,14 @@ prints&nbsp;the&nbsp;predicted&nbsp;scores&nbsp;and&nbsp;rmse&nbsp;for&nbsp;all&
 <font color="#ffffff" face="helvetica, arial"><big><strong>Data</strong></big></font></td></tr>
     
 <tr><td bgcolor="#55aa55"><tt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</tt></td><td>&nbsp;</td>
-<td width="100%"><strong>data_file</strong> = &lt;_io.TextIOWrapper name='/u/downing/public_html/...es/ckc735-movies.json' mode='r' encoding='UTF-8'&gt;<br>
+<td width="100%"><strong>__warningregistry__</strong> = {("unclosed file &lt;_io.BufferedReader name='/u/downi...ml/netflix-caches/kh549-customer_average.pickle'&gt;", &lt;class 'ResourceWarning'&gt;, 48): True, ("unclosed file &lt;_io.BufferedReader name='/u/downi..._html/netflix-caches/mdg7227-real_scores.pickle'&gt;", &lt;class 'ResourceWarning'&gt;, 57): True, 'version': 12}<br>
+<strong>customer_avg</strong> = {6: 3.4185303514377, 7: 4.011350737797957, 8: 4.214285714285714, 10: 3.3923076923076922, 25: 3.4814814814814814, 33: 3.75, 42: 3.921875, 59: 3.7070063694267517, 79: 3.548994974874372, 83: 3.96875, ...}<br>
+<strong>data_file</strong> = &lt;_io.TextIOWrapper name='/u/downing/public_html/...es/ckc735-movies.json' mode='r' encoding='UTF-8'&gt;<br>
 <strong>f</strong> = &lt;_io.BufferedReader name='/u/downing/public_html/netflix-caches/mdg7227-real_scores.pickle'&gt;<br>
 <strong>movie_averages</strong> = {'1': 3.75, '10': 3.18, '100': 2.65, '1000': 3.28, '10000': 2.9, '10001': 3.8, '10002': 3.44, '10003': 2.47, '10004': 4.21, '10005': 3.25, ...}<br>
-<strong>movies</strong> = 17770<br>
-<strong>output_data</strong> = {}<br>
-<strong>ratings</strong> = 100480507<br>
+<strong>output_data</strong> = OrderedDict()<br>
 <strong>real_scores</strong> = {1: {14756: 4, 30878: 4, 317050: 5, 470861: 5, 548064: 5, 712610: 4, 1027056: 3, 1059319: 3, 1149588: 4, 1283744: 3, ...}, 2: {584750: 3, 715897: 5, 748922: 5, 1131325: 2, 1172326: 5, 1312846: 3, 1636093: 5, 1959936: 5, 2314531: 4, 2418486: 4}, 3: {44402: 4, 47512: 4, 114072: 5, 177678: 4, 307313: 5, 311641: 1, 349821: 4, 475143: 4, 823979: 3, 1043428: 2, ...}, 4: {410199: 5, 2434289: 2, 2498512: 4, 2573419: 3}, 5: {70199: 4, 81979: 5, 100750: 5, 209999: 5, 221630: 1, 258801: 5, 358664: 5, 368977: 5, 382445: 4, 401117: 3, ...}, 6: {94660: 5, 113867: 1, 123354: 2, 189162: 4, 212870: 4, 244931: 5, 266808: 2, 284410: 1, 320468: 4, 468582: 4, ...}, 7: {697116: 3, 1029108: 1, 1550847: 4}, 8: {695: 1, 17713: 4, 21722: 4, 25176: 4, 30393: 1, 30996: 1, 32295: 4, 32762: 5, 33066: 3, 35647: 1, ...}, 9: {1166912: 3, 1990416: 4}, 10: {1531863: 3, 1952305: 3}, ...}<br>
 <strong>sqrt</strong> = &lt;ufunc 'sqrt'&gt;<br>
 <strong>square</strong> = &lt;ufunc 'square'&gt;<br>
-<strong>subtract</strong> = &lt;ufunc 'subtract'&gt;<br>
-<strong>users</strong> = 480189</td></tr></table>
+<strong>subtract</strong> = &lt;ufunc 'subtract'&gt;</td></tr></table>
 </body></html>
