--- a/Netflix.html
+++ b/Netflix.html
@@ -32,7 +32,10 @@
 <font color="#ffffff" face="helvetica, arial"><big><strong>Functions</strong></big></font></td></tr>
     
 <tr><td bgcolor="#eeaa77"><tt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</tt></td><td>&nbsp;</td>
-<td width="100%"><dl><dt><a name="-mktime"><strong>mktime</strong></a>(...)</dt><dd><tt><a href="#-mktime">mktime</a>(tuple)&nbsp;-&gt;&nbsp;floating&nbsp;point&nbsp;number<br>
+<td width="100%"><dl><dt><a name="-get_pickle"><strong>get_pickle</strong></a>(filepath)</dt><dd><tt>Accept&nbsp;a&nbsp;file&nbsp;patch&nbsp;to&nbsp;a&nbsp;.pickle&nbsp;cache&nbsp;file&nbsp;and&nbsp;return&nbsp;a&nbsp;dict<br>
+filepath&nbsp;a&nbsp;string<br>
+return&nbsp;a&nbsp;loaded&nbsp;pickle&nbsp;object</tt></dd></dl>
+ <dl><dt><a name="-mktime"><strong>mktime</strong></a>(...)</dt><dd><tt><a href="#-mktime">mktime</a>(tuple)&nbsp;-&gt;&nbsp;floating&nbsp;point&nbsp;number<br>
 &nbsp;<br>
 Convert&nbsp;a&nbsp;time&nbsp;tuple&nbsp;in&nbsp;local&nbsp;time&nbsp;to&nbsp;seconds&nbsp;since&nbsp;the&nbsp;Epoch.<br>
 Note&nbsp;that&nbsp;<a href="#-mktime">mktime</a>(gmtime(0))&nbsp;will&nbsp;not&nbsp;generally&nbsp;return&nbsp;zero&nbsp;for&nbsp;most<br>
@@ -66,7 +69,6 @@ returns&nbsp;two&nbsp;lists&nbsp;of&nbsp;corresponding&nbsp;actual&nbsp;and&nbsp
 <tr><td bgcolor="#55aa55"><tt>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</tt></td><td>&nbsp;</td>
 <td width="100%"><strong>customer_avg</strong> = {6: 3.4185303514377, 7: 4.011350737797957, 8: 4.214285714285714, 10: 3.3923076923076922, 25: 3.4814814814814814, 33: 3.75, 42: 3.921875, 59: 3.7070063694267517, 79: 3.548994974874372, 83: 3.96875, ...}<br>
 <strong>data_file</strong> = &lt;_io.TextIOWrapper name='/u/downing/public_html/...es/ckc735-movies.json' mode='r' encoding='UTF-8'&gt;<br>
-<strong>f</strong> = &lt;_io.BufferedReader name='/u/downing/public_html/netflix-caches/mdg7227-real_scores.pickle'&gt;<br>
 <strong>movie_averages</strong> = {'1': 3.75, '10': 3.18, '100': 2.65, '1000': 3.28, '10000': 2.9, '10001': 3.8, '10002': 3.44, '10003': 2.47, '10004': 4.21, '10005': 3.25, ...}<br>
 <strong>output_data</strong> = OrderedDict()<br>
 <strong>real_scores</strong> = {1: {14756: 4, 30878: 4, 317050: 5, 470861: 5, 548064: 5, 712610: 4, 1027056: 3, 1059319: 3, 1149588: 4, 1283744: 3, ...}, 2: {584750: 3, 715897: 5, 748922: 5, 1131325: 2, 1172326: 5, 1312846: 3, 1636093: 5, 1959936: 5, 2314531: 4, 2418486: 4}, 3: {44402: 4, 47512: 4, 114072: 5, 177678: 4, 307313: 5, 311641: 1, 349821: 4, 475143: 4, 823979: 3, 1043428: 2, ...}, 4: {410199: 5, 2434289: 2, 2498512: 4, 2573419: 3}, 5: {70199: 4, 81979: 5, 100750: 5, 209999: 5, 221630: 1, 258801: 5, 358664: 5, 368977: 5, 382445: 4, 401117: 3, ...}, 6: {94660: 5, 113867: 1, 123354: 2, 189162: 4, 212870: 4, 244931: 5, 266808: 2, 284410: 1, 320468: 4, 468582: 4, ...}, 7: {697116: 3, 1029108: 1, 1550847: 4}, 8: {695: 1, 17713: 4, 21722: 4, 25176: 4, 30393: 1, 30996: 1, 32295: 4, 32762: 5, 33066: 3, 35647: 1, ...}, 9: {1166912: 3, 1990416: 4}, 10: {1531863: 3, 1952305: 3}, ...}<br>
